--- a/basediproject/src/main/res/drawable/circle_black.xml
+++ b/basediproject/src/main/res/drawable/circle_black.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/colorPrimary" />
+    <solid android:color="@android:color/white" />
     <corners android:radius="@dimen/dp_100" />
 </shape>
