--- a/basediproject/src/main/res/drawable/rounded_corner_top_background.xml
+++ b/basediproject/src/main/res/drawable/rounded_corner_top_background.xml
@@ -4,7 +4,7 @@
     <item>
         <shape android:shape="rectangle">
 
-            <solid android:color="@color/white" />
+            <solid android:color="#ffffff" />
             <corners
                 android:bottomLeftRadius="@dimen/dp_0"
                 android:bottomRightRadius="@dimen/dp_0"
