--- a/basediproject/src/main/res/values/styles.xml
+++ b/basediproject/src/main/res/values/styles.xml
@@ -23,4 +23,9 @@
         <item name="android:windowBackground">@android:color/background_dark</item>
         <!--        <item name="android:statusBarColor">@color/slate_black</item>-->
     </style>
+    <style name="BottomSheetDialogThemeNoFloating" parent="Theme.Design.Light.BottomSheetDialog">
+        <item name="android:windowIsFloating">false</item>
+        <item name="android:windowSoftInputMode">adjustResize|stateVisible</item>
+    </style>
+
 </resources>
