Loader added in file picker

--- a/basediproject/src/main/res/layout/activity_file_picker.xml
+++ b/basediproject/src/main/res/layout/activity_file_picker.xml
@@ -35,10 +35,24 @@
 
     </FrameLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvFileList"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:listitem="@layout/item_file_picker" />
+        android:layout_height="match_parent">
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvFileList"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:listitem="@layout/item_file_picker" />
+
+        <ProgressBar
+            android:id="@+id/pbLoading"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:visibility="gone"
+            tools:visibility="visible"
+            android:indeterminateTint="@android:color/darker_gray"
+            android:progressTint="@android:color/darker_gray" />
+    </FrameLayout>
 </LinearLayout>
